--- a/requirements.txt
+++ b/requirements.txt
@@ -1,94 +1,25 @@
-aiohttp==3.7.4.post0
-appdirs==1.4.4
-asgiref==3.4.1
-astroid==2.5
-async-timeout==3.0.1
-attrs==21.2.0
-auditlog3==1.0.1
+asgiref==3.5.2
 backports.zoneinfo==0.2.1
-beautifulsoup4==4.9.2
-black==21.6b0
-bs4==0.0.1
-certifi==2021.5.30
-cffi==1.14.6
-chardet==4.0.0
+certifi==2022.6.15
 charset-normalizer==2.0.12
-click==8.0.1
-cloudinary==1.26.0
-colorama==0.4.4
-cryptography==3.4.7
-defusedxml==0.7.1
+cloudinary==1.29.0
 dj-database-url==0.5.0
-Django==3.1.5
-django-allauth==0.45.0
-django-cleanup==5.2.0
-django-cloudinary-storage==0.3.0
-django-countries-with-calling-codes==0.1.1
-django-crispy-forms==1.9.2
-django-debug-toolbar==3.2.1
-django-environ==0.4.5
-django-filter==2.4.0
+Django==4.0.2
+django-crispy-forms==1.14.0
+django-filter==21.1
 django-heroku==0.3.1
-django-jazzmin==2.4.8
-django-jet-reboot==1.1.1
 django-mathfilters==1.0.0
-django-paypal==1.1.1
-django-phone-field==1.8.1
-django-utils-six==2.0
-django-widget-tweaks==1.4.8
-djangorestframework==3.12.4
-docx==0.2.4
-feedparser==6.0.8
-fontawesome==5.10.1.post1
+django-widget-tweaks==1.4.12
+djangorestframework==3.13.1
+fontawesome-free==5.15.4
 fontawesomefree==6.1.1
-geoip2==4.2.0
-gunicorn==20.1.0
-httpie==2.4.0
-idna==2.10
-isort==5.9.3
-lazy-object-proxy==1.6.0
-lxml==4.6.3
-Markdown==3.3.4
-maxminddb==2.0.3
-mccabe==0.6.1
-multidict==5.1.0
-mypy-extensions==0.4.3
-numpy==1.19.5
-oauthlib==3.1.1
-pandas==1.3.1
-pathspec==0.8.1
-Pillow==8.1.2
-protobuf==3.17.3
-psycopg2==2.9.1
-psycopg2-binary==2.9.3
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycodestyle==2.7.0
-pycparser==2.20
-Pygments==2.9.0
-PyJWT==2.1.0
-pylint==2.6.0
-pylint-django==2.4.4
-pylint-plugin-utils==0.6
-PyMySQL==1.0.2
-PySocks==1.7.1
-python-dateutil==2.8.2
-python-decouple==3.4
-python-docx==0.8.10
-python3-openid==3.2.0
-pytz==2020.5
-regex==2021.4.4
-reportlab==3.5.67
-requests==2.25.1
-requests-oauthlib==1.3.0
-requests-toolbelt==0.9.1
-sgmllib3k==1.0.0
+idna==3.3
+numpy==1.23.0
+Pillow==9.1.1
+psycopg2==2.9.3
+pytz==2022.1
+requests==2.28.0
 six==1.16.0
-soupsieve==2.0.1
-sqlparse==0.4.1
-toml==0.10.2
-typing-extensions==3.10.0.0
-urllib3==1.26.5
-whitenoise==5.3.0
-wrapt==1.12.1
-yarl==1.6.3
+sqlparse==0.4.2
+urllib3==1.26.9
+whitenoise==6.2.0
