--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ django-widget-tweaks==1.4.12
 djangorestframework==3.13.1
 fontawesome-free==5.15.4
 fontawesomefree==6.1.1
+gunicorn==20.1.0
 idna==3.3
 numpy==1.23.0
 Pillow==9.1.1
