--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ billiard==3.6.4.0
 bs4==0.0.1
 celery==5.2.7
 certifi==2022.6.15
+cffi==1.15.1
 charset-normalizer==2.0.12
 click==8.1.3
 click-didyoumean==0.3.0
@@ -16,10 +17,13 @@ cloudinary==1.29.0
 Deprecated==1.2.13
 dj-database-url==0.5.0
 Django==4.0.2
+django-celery-beat==2.3.0
+django-celery-results==2.4.0
 django-crispy-forms==1.14.0
 django-filter==21.1
 django-heroku==0.3.1
 django-mathfilters==1.0.0
+django-timezone-field==5.0
 django-widget-tweaks==1.4.12
 djangorestframework==3.13.1
 fontawesome-free==5.15.4
@@ -32,13 +36,18 @@ packaging==21.3
 Pillow==9.1.1
 prompt-toolkit==3.0.30
 psycopg2==2.9.3
+pycparser==2.21
 pyparsing==3.0.9
+python-crontab==2.6.0
+python-dateutil==2.8.2
 pytz==2022.1
+rabbitmq==0.2.0
 redis==4.3.4
 requests==2.28.0
 six==1.16.0
 soupsieve==2.3.2.post1
 sqlparse==0.4.2
+tzdata==2022.2
 urllib3==1.26.9
 vine==5.0.0
 wcwidth==0.2.5
