--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ Django==4.0.2
 django-celery-beat==2.3.0
 django-celery-results==2.4.0
 django-crispy-forms==1.14.0
-django-extensions==3.2.0
+django-dotenv==1.4.2
 django-filter==21.1
 django-heroku==0.3.1
 django-mathfilters==1.0.0
@@ -41,7 +41,6 @@ pycparser==2.21
 pyparsing==3.0.9
 python-crontab==2.6.0
 python-dateutil==2.8.2
-python-decouple==3.6
 pytz==2022.1
 rabbitmq==0.2.0
 redis==4.3.4
