--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ amqp==5.1.1
 arabic-reshaper==2.1.3
 asgiref==3.5.2
 asn1crypto==1.5.1
+async-generator==1.10
 async-timeout==4.0.2
+attrs==22.2.0
 backports.zoneinfo==0.2.1
 beautifulsoup4==4.11.1
 billiard==3.6.4.0
@@ -23,6 +25,7 @@ dj-database-url==0.5.0
 Django==4.0.2
 django-celery-beat==2.3.0
 django-celery-results==2.4.0
+django-cors-headers==3.13.0
 django-countries==7.3.2
 django-crispy-forms==1.14.0
 django-dotenv==1.4.2
@@ -34,10 +37,12 @@ django-timezone-field==5.0
 django-widget-tweaks==1.4.12
 djangorestframework==3.13.1
 docopt==0.6.2
+exceptiongroup==1.1.0
 fontawesome-free==5.15.4
 fontawesomefree==6.1.1
 future==0.18.2
 gunicorn==20.1.0
+h11==0.14.0
 html5lib==1.1
 idna==3.3
 kombu==5.2.4
@@ -45,6 +50,7 @@ lxml==4.9.1
 num2words==0.5.12
 numpy==1.23.0
 oscrypto==1.3.0
+outcome==1.2.0
 packaging==21.3
 pandas==1.5.0
 pdfkit==1.0.0
@@ -56,6 +62,7 @@ pyHanko==0.13.2
 pyhanko-certvalidator==0.19.5
 pyparsing==3.0.9
 PyPDF3==1.0.6
+PySocks==1.7.1
 python-bidi==0.4.2
 python-crontab==2.6.0
 python-dateutil==2.8.2
@@ -68,13 +75,18 @@ rabbitmq==0.2.0
 redis==4.3.4
 reportlab==3.6.11
 requests==2.28.0
+selenium==4.7.2
 six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
 soupsieve==2.3.2.post1
 sqlparse==0.4.2
 svglib==1.4.1
 swapper==1.3.0
 tinycss2==1.1.1
 tqdm==4.64.0
+trio==0.22.0
+trio-websocket==0.9.2
 typing-extensions==4.3.0
 tzdata==2022.2
 tzlocal==4.2
@@ -85,4 +97,5 @@ wcwidth==0.2.5
 webencodings==0.5.1
 whitenoise==6.2.0
 wrapt==1.14.1
+wsproto==1.2.0
 xhtml2pdf==0.2.8
